Get glew and glm with FetchContent

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -14,12 +14,18 @@ FetchContent_Declare(
 )
 FetchContent_Declare(
     GLEW
-    GIT_REPOSITORY https://github.com/nigels-com/glew
-    GIT_TAG 9fb23c3e61cbd2d581e33ff7d8579b572b38ee26 # 2.2.0
+    GIT_REPOSITORY https://github.com/Perlmint/glew-cmake
+    GIT_TAG f456deace7b408655109aaeff71421ef2d3858c6 # 2.2.0
     FIND_PACKAGE_ARGS NAMES GLEW
+)
+FetchContent_Declare(
+    glm
+    GIT_REPOSITORY https://github.com/g-truc/glm
+    GIT_TAG bf71a834948186f4097caa076cd2663c69a10e1e # 0.9.9.8
 )
 FetchContent_MakeAvailable(glfw3)
 FetchContent_MakeAvailable(GLEW)
+FetchContent_MakeAvailable(glm)
 ###
 
 ###
@@ -27,5 +33,6 @@ FetchContent_MakeAvailable(GLEW)
 ###
 file(GLOB client_src CONFIGURE_DEPENDS "*.cpp" "**/*.cpp" "*.hpp" "**/*.hpp")
 add_executable(client ${core_src} ${client_src})
-target_link_libraries(client PRIVATE fmt::fmt flecs::flecs_static glfw GLEW::GLEW ${OPENGL_LIBRARIES})
+target_include_directories(client PRIVATE ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR})
+target_link_libraries(client PRIVATE fmt::fmt flecs::flecs_static glfw libglew_static glm ${OPENGL_LIBRARIES})
 ###
