--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -34,5 +34,10 @@ FetchContent_MakeAvailable(glm)
 file(GLOB client_src CONFIGURE_DEPENDS "*.cpp" "**/*.cpp" "*.hpp" "**/*.hpp")
 add_executable(client ${core_src} ${client_src})
 target_include_directories(client PRIVATE ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR})
-target_link_libraries(client PRIVATE fmt::fmt flecs::flecs_static glfw libglew_static glm ${OPENGL_LIBRARIES})
+target_link_libraries(client PRIVATE fmt::fmt flecs::flecs_static glfw glm ${OPENGL_LIBRARIES})
+if (APPLE)
+    target_link_libraries(client PRIVATE GLEW::glew)
+else()
+    target_link_libraries(client PRIVATE libglew_static)
+endif()
 ###
