Not exactly working right

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -33,8 +33,8 @@ FetchContent_MakeAvailable(glm)
 ###
 file(GLOB client_src CONFIGURE_DEPENDS "*.cpp" "**/*.cpp" "*.hpp" "**/*.hpp")
 add_executable(client ${core_src} ${client_src})
-target_include_directories(client PRIVATE ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR})
-target_link_libraries(client PRIVATE fmt::fmt flecs::flecs_static glfw glm ${OPENGL_LIBRARIES})
+target_include_directories(client PRIVATE ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${msgpackc_SOURCE_DIR}/include)
+target_link_libraries(client PRIVATE fmt::fmt spdlog::spdlog flecs::flecs_static glfw glm asio ${OPENGL_LIBRARIES})
 if (APPLE)
     target_link_libraries(client PRIVATE GLEW::glew)
 else()
